--- a/claseMedidas/minMax/style.css
+++ b/claseMedidas/minMax/style.css
@@ -13,8 +13,8 @@ main {
 section {
     width: 80%;
     min-width: 320px;
-    max-width: 500px;
-    min-height: 500px;
-    margin: 0 auto;
+    max-width: 300px;
+    min-height: 300px;
+    margin: 0 auto; /*pone margen a los lados pero deja en cero arriba y abajo*/
     background-color: red;
 }
