--- a/claseDisplay/blockInline/style.css
+++ b/claseDisplay/blockInline/style.css
@@ -7,14 +7,15 @@
 .nav {
     background-color: peachpuff;
     padding: 20px;
-    list-style: none;
+    list-style: none; /*que no tenga bullets*/
     text-align: center;
 }
 
 .nav li {
-    display: inline-block;
+    display: inline-block; /*si se le puede agregar margin y padding arriba y abajo*/
     font-size: 20px;
     margin: 10px 0;
     padding-left: 20px;
     padding-right: 20px;
+    align-content: center;
 }
