--- a/claseEspecificidad/style.css
+++ b/claseEspecificidad/style.css
@@ -1,10 +1,13 @@
+
+
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-h1 {
+h1 { /*la etiqueta se llama solo por su nombre, sin . ni # */
     color: purple;
     font-family: serif;
     margin-bottom;10px: 
@@ -23,6 +26,7 @@ h1 {
 
 .nav li {
     display: inline-block;
+    position: static;
 }
 
 .nav a {
