--- a/claseMedidas/absolutas/style.css
+++ b/claseMedidas/absolutas/style.css
@@ -1,9 +1,9 @@
 main {
     background-color: red;
-    width: 600px;
+    width: 100%;
     height: 500px;
 }
 
 p {
-    font-size: 50%;
+    font-size: 16px;
 }
